<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">


    <ImageView
        android:id="@+id/back"
        android:layout_width="19dp"
        android:layout_height="20.5dp"
        android:layout_marginStart="25.75dp"
        android:layout_marginTop="24.5dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/model_title"
        android:layout_width="wrap_content"
        android:layout_height="26.75dp"
        android:fontFamily="HWtext-65ST"
        android:layout_marginStart="25.75dp"
        android:layout_marginTop="21.5dp"
        android:text="@string/text_post"
        android:textColor="#FFFFFFFF"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back" />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="21.5dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140.5dp"
        android:fontFamily="HWtext-65ST"
        android:text="@string/instructions"
        android:textColor="#FFFFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model_title" />

    <TextView
        android:id="@+id/game_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/tip"
        android:textColor="#FFFFFFFF"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_title" />

    <ImageView
        android:id="@+id/iv_one"
        android:layout_width="110dp"
        android:layout_height="130dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_des"
        android:background="@drawable/danren" />

    <TextView
        android:id="@+id/tv_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="PingFangSC-Regular"
        android:text="@string/single"
        android:textColor="#FF30B5C5"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_one" />


</androidx.constraintlayout.widget.ConstraintLayout>