<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/pupup_bg"
    android:orientation="vertical" >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#19000000"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="15dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/please" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/float_threshold_value"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:hint="@string/et_hiht"
                android:maxLength="6"/>
            <View
                android:id="@+id/mb_or_gb_layout_line"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#26000000"
                android:visibility="visible"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        >
        <Button
            android:id="@+id/btn_cancle"
            android:textColor="#007DFF"
            android:textSize="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default_disabled_emui"
            android:text="@string/cancel"
            android:layout_marginRight="6dp">
        </Button>
        <Button
            android:id="@+id/btn_sure"
            android:textColor="#007DFF"
            android:textSize="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default_disabled_emui"
            android:layout_marginLeft="6dp"
            android:text="@string/ok">
        </Button>
    </LinearLayout>

</LinearLayout>